Match native startup terminal chrome